# ZipX

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/zipx/: __init__.py  cli.py  crypto.py  hashing.py  pipeline.py  rle.py
tests/: test_cli.py  test_crypto.py  test_hashing.py  test_pipeline.py  test_rle.py
