[project]
name = "zipx"
version = "0.1.0"
description = "CLI file encryption (XOR) and compression (RLE) tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
]

[project.scripts]
zipx = "zipx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zipx"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
